--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="app">
+        <h1>{{ title }}</h1>
+    <img :src="image" alt="">
+    </div>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
